--- a/Homework/Homework14/ForestGameHWSolution/ForestGameHWSolution.cabal
+++ b/Homework/Homework14/ForestGameHWSolution/ForestGameHWSolution.cabal
@@ -11,11 +11,16 @@ extra-doc-files:    CHANGELOG.md
 
 
 executable ForestModule
-    import:            warnings
+    -- import:            warnings
     main-is:           Main.hs
     other-modules:     Forest.Level1
                      , User.Actions.Move
+                     , User.Actions.Battle
     build-depends:     base ^>=4.16.4.0
                      , random
-    hs-source-dirs:    app
+    hs-source-dirs:    app,src
     default-language:  Haskell2010
+    default-extensions:   NamedFieldPuns
+                        , TypeApplications
+                        , RecordWildCards 
+                        , NumericUnderscores
